--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
        
         <span class="border border-light rounded m-1 mx-2 mr-4">
-            <img src="/img/logo.jpg" width="45" height="45" alt="" class="rounded">
+            <img src="img/logo.jpg" width="45" height="45" alt="" class="rounded">
         </span>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
